Added a switch to jcheck_nrpe to enable weak cipher suites. Fixed findbug issues Moved tests to unit test folder and added fluent test api